--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -177,3 +177,9 @@ dependencies {
 }
 
 android.packagingOptions.jniLibs.useLegacyPackaging = true
+
+android.packagingOptions.jniLibs.useLegacyPackaging = true
+
+android.packagingOptions.jniLibs.useLegacyPackaging = true
+
+android.packagingOptions.jniLibs.useLegacyPackaging = true
