--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
     "@clerk/expo-passkeys": "^0.3.20",
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@daily-co/config-plugin-rn-daily-js": "^0.0.9",
-    "@daily-co/react-native-daily-js": "^0.78.0",
-    "@daily-co/react-native-webrtc": "118.0.3-daily.1",
+    "@daily-co/react-native-daily-js": "^0.76.0",
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.1.1",
-    "@react-native-async-storage/async-storage": "^1.15.7",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@vapi-ai/react-native": "^0.2.4",
+    "@tanstack/react-query": "^5.83.0",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
@@ -45,9 +44,9 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.60.0",
     "react-native": "0.79.5",
-    "react-native-background-timer": "^2.3.1",
+    "react-native-background-timer": "^2.4.1",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-get-random-values": "^1.9.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -57,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
