--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.83.0",
+    "@types/node": "^24.1.0",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
@@ -58,6 +59,7 @@
     "@babel/core": "^7.25.2",
     "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
