Update API URL to use ngrok for article fetching and refactor related code

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cmVzdGVkLW93bC00Mi5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_RKaCN7wmXciur2WYb5fyij2l2u2hvybxPBV4CNyynj
 
-EXPO_PUBLIC_API_URL=http://192.168.114.143:3000
+EXPO_PUBLIC_API_URL=https://e206fbebdde0.ngrok-free.app
 
 
 EXPO_PUBLIC_VAPI_ASSISTANT_ID=4cdc13d4-0067-440c-838f-2e245717a3d4
