--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "@clerk/expo-passkeys": "^0.3.20",
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@daily-co/config-plugin-rn-daily-js": "^0.0.9",
-    "@daily-co/react-native-daily-js": "^0.76.0",
+    "@daily-co/react-native-daily-js": "^0.78.0",
+    "@daily-co/react-native-webrtc": "118.0.3-daily.3",
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.1.1",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.83.0",
     "@types/node": "^24.1.0",
+    "@vapi-ai/react-native": "^0.2.4",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
