--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,8 +23,10 @@ def reactNativeAndroidDir = new File(
 allprojects {
   repositories {
     maven {
+      // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
       url(reactNativeAndroidDir)
     }
+
     google()
     mavenCentral()
     maven { url 'https://www.jitpack.io' }
