--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -55,6 +55,12 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
 
-android.minSdkVersion=24
 # Whether the app is configured to use edge-to-edge via the app config or `react-native-edge-to-edge` plugin
 expo.edgeToEdgeEnabled=true
+android.minSdkVersion=24
+
+MYAPP_UPLOAD_STORE_FILE=my-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=123456 // Replace with your actual keystore password
+MYAPP_UPLOAD_KEY_PASSWORD=123456 // Replace with your actual key password
+
