--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@daily-co/config-plugin-rn-daily-js": "^0.0.9",
     "@daily-co/react-native-daily-js": "^0.78.0",
-    "@daily-co/react-native-webrtc": "118.0.3-daily.3",
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.1.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -50,6 +49,7 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-mmkv": "2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
