--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@daily-co/config-plugin-rn-daily-js": "^0.0.9",
     "@daily-co/react-native-daily-js": "^0.78.0",
     "@expo/vector-icons": "^14.1.0",
+    "@gorhom/bottom-sheet": "^5",
     "@hookform/resolvers": "^5.1.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
