--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cmVzdGVkLW93bC00Mi5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_RKaCN7wmXciur2WYb5fyij2l2u2hvybxPBV4CNyynj
 
-# EXPO_PUBLIC_API_URL=https://amazon-mobile-api.onrender.com
+EXPO_PUBLIC_API_URL=https://amazon-mobile-api.onrender.com
 
 
 EXPO_PUBLIC_VAPI_ASSISTANT_ID=4cdc13d4-0067-440c-838f-2e245717a3d4
@@ -13,4 +13,4 @@ EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_51RL7vCF7q16adzOG3CYHCUJ45IPxSOxtznBQ
 
 
 # EXPO_PUBLIC_API_URL=http://localhost:3000
-EXPO_PUBLIC_API_URL=http://192.168.98.143:3000
+# EXPO_PUBLIC_API_URL=http://192.168.216.143:3000
