--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -61,7 +61,7 @@ android.minSdkVersion=24
 
 
 
-# MYAPP_UPLOAD_STORE_FILE=my-key.keystore
-# MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-# MYAPP_UPLOAD_STORE_PASSWORD=123456
-# MYAPP_UPLOAD_KEY_PASSWORD=123456
+MYAPP_UPLOAD_STORE_FILE=my-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=123456
+MYAPP_UPLOAD_KEY_PASSWORD=123456
