--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,3 +173,5 @@ dependencies {
 }
 
 android.packagingOptions.jniLibs.useLegacyPackaging = true
+
+android.packagingOptions.jniLibs.useLegacyPackaging = true
